<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="16dp"
                  android:background="#eaeaea"
                  android:orientation="horizontal">

        <!-- Upcoming events, top 10 schools & ad bar -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="600dp"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

            <!-- Upcoming events -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="360dp"
                          android:layout_height="300dp"
                          android:layout_alignParentLeft="true"
                          android:id="@+id/name"
                          android:orientation="vertical">

                <TextView
                    style="@style/homepage"
                    android:text="@string/home_homepage_header"/>

                <TextView
                    style="@style/upcoming"
                    android:text="@string/home_homepage"/>
            </LinearLayout>

            <!-- Top 10 Schools -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="230dp"
                          android:layout_height="300dp"
                          android:layout_alignParentRight="true"
                          android:orientation="vertical">

                <TextView
                    style="@style/homepage"
                    android:text="@string/home_top10_schools_header"/>

                <TextView
                    style="@style/upcoming"
                    android:text="@string/home_top10_schools"/>
            </LinearLayout>

            <!-- Advertisement bar -->
            <TextView
                style="@style/ads"
                android:layout_below="@id/name"
                android:text="@string/home_ads"/>
        </RelativeLayout>

        <!-- Login & Top 3 Sports -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="300dp"
                      android:layout_height="fill_parent"
                      android:orientation="vertical">

            <!-- Login -->
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="120dp"
                            android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="top"
                    android:hint="@string/home_username"/>

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_below="@id/username"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/home_password"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_below="@id/username"
                    android:layout_alignParentRight="true"
                    android:text="@string/home_login"/>
            </RelativeLayout>

            <!-- Top 3 Athletics -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="fill_parent"
                          android:layout_height="150dp"
                          android:orientation="vertical">

                <TextView
                    style="@style/homepage"
                    android:text="@string/home_top3_athletics_header"/>

                <TextView
                    style="@style/upcoming"
                    android:text="@string/home_top3_athletics"/>
            </LinearLayout>

            <!-- Top 3 Swimming -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="fill_parent"
                          android:layout_height="175dp"
                          android:orientation="vertical">

                <TextView
                    style="@style/homepage"
                    android:text="@string/home_top3_swimming_header"/>

                <TextView
                    style="@style/upcoming"
                    android:text="@string/home_top3_swimming"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
